--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     </div>
     <div ui-view="settings">
       Settings
+        <ul class="nav">
+            <li ui-state="settings/person"><a>Sub person</a></li>
+            <li ui-state="settings/admin"><a>Sub Admin</a></li>
+        </ul>
+        <div ui-view="settings/person">
+            Sub person
+        </div>
+        <div ui-view="settings/admin">
+            Sub Admin
+        </div>
     </div>
     <div ui-view="report">
         Report
